# diet

./: .env.template  .gitignore  CLAUDE.md  README.md  TODOs.md  pyproject.toml  quickstart.sh  requirements.txt  setup.sh
.claude/: AGENT.md  DATA_SOURCES.md
.claude/PRPs/prds/: 02-diet-service-api-stabilization.prd.md  05-journal-diet-integration.prd.md  06-actionable-insights-notifications.prd.md  09-chrome-shrine-diet-integration.prd.md  (+1 more)
app/: __init__.py  main.py
app/routers/: __init__.py  diet_insight.py
app/services/: __init__.py  notification_service.py
config/: config.yaml
config/api/: default.yaml  langsmith.yaml
config/app/: development.yaml
config/llm/: default.yaml  openai.yaml  openrouter.yaml  prompts.yaml
config/logging/: development.yaml  production.yaml
config/pipeline/: default.yaml  demo.yaml  meal_planner.yaml
config/prompts/: amazon_store_agent.yaml  default.yaml  symptom_diet_solver.yaml
data/demo/: diseased_journal_entries.json  raw_journal_entries.json  structured_journal_entries.json  synthetic_raw_entries.json
diet/health_store_agent/: __init__.py  base_adapter.py  factory.py  normalizer.py
diet/models/: __init__.py  alerts.py  errors.py  events.py  health_units.py  responses.py  shared.py  store.py
diet/notifications/: __init__.py  handlers.py  router.py
diet/sdo/: __init__.py  alert_classifier.py  analyzer.py  correlator.py  engine.py  recommender.py
diet/utils/: __init__.py  config_manager.py  json_utils.py  llm_client.py  llm_service.py  logger.py
docs/: API.md  PRD_SYMPTOM_DIET_OPTIMIZER.md
tests/: test_amazon_store_agent.py  test_api_contract.py  test_api_integration.py  test_error_handling.py  test_health_store_agent.py  test_notification_service.py  test_notifications.py  test_sdo_engine.py
(+10 files in other folders)
